# SUITE_VET

./: .gitignore  AGENTS.md  README.md  antibio.js  app.js  farma.js  farmacos.json  fisio.css  fisio.js  glosario.js  guias.js  index.html  micro.js  package-lock.json  package.json  patologia.css  recetario.js  router.js  styles.css  vite.config.mjs
backend/: .env.example  README.md  README_AUTH.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  bibliography.py  catalog.py  health.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/core/security/: __init__.py  jwt.py
backend/app/data/: __init__.py  bibliography.json  modules.json
backend/app/domains/: __init__.py
backend/app/domains/auth/: __init__.py  dependencies.py
backend/app/domains/bibliography/: __init__.py  repository.py  service.py
backend/app/domains/catalog/: __init__.py  repository.py  service.py
backend/app/schemas/: __init__.py  auth.py  bibliography.py  catalog.py  health.py
backend/tests/: conftest.py  test_auth.py  test_bibliography.py  test_catalog.py  test_health.py
scripts/: compose-remote-pgtap.mjs
shared/: SUITE_VET_UI_SYSTEM.md  about.css  about.js  admin-center.css  admin-center.js  api-client.js  auth-service.js  auth-ui.js  auth.css  bibliography.js  categorias.css  categorias.js  components.css  dashboard.css  dashboard.js  favoritos.css  favoritos.js  landing.css  landing.js  layout.css  liquid-glass.css  module-catalog.js  recetario.css  recetario.js  router.js  (+8 more)
(+85 files in other folders)
