[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "suite-vet-api"
version = "0.1.0"
description = "Versioned FastAPI domain boundary for Suite Vet 2.0."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.116,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
